test_regress/t/t_inside_unpacked_param.out
%Error: t/t_inside_unpacked_param.v:17:43: Expecting expression to be constant, but can't convert a CMETHODHARD 'inside' to constant.
                                         : ... note: In instance 't'
   17 |    localparam HIT_INSIDE = HIT_LP inside {CHECKLIST_P};
      |                                           ^~~~~~~~~~~
%Error: t/t_inside_unpacked_param.v:18:45: Expecting expression to be constant, but can't convert a CMETHODHARD 'inside' to constant.
                                         : ... note: In instance 't'
   18 |    localparam MISS_INSIDE = MISS_LP inside {CHECKLIST_P};
      |                                             ^~~~~~~~~~~
%Error: Exiting due to
